# freelance-assistant

./: .env.deploy.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  devservices.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.kb/: deploy.yaml
alembic/: env.py
alembic/versions/: a0cbfadf5077_initial.py  b1d2e3f4a5b6_add_user_job_states.py
config/: profile.yaml  scoring.yaml  sources.yaml  status_check.yaml  workflow.yaml
config/cases/: api_integrations.yaml  scraping.yaml  telegram_bots.yaml
config/users/: friend.yaml  kirill.yaml
src/freelance_assitant/: __init__.py  __main__.py  config.py
src/freelance_assitant/api/: app.py
src/freelance_assitant/bot/: commands.py  handlers.py  keyboard.py  notify.py  setup.py
src/freelance_assitant/collectors/: base.py  fl_ru.py  kwork.py  registry.py  telegram_channels.py  workspace.py
src/freelance_assitant/domain/: enums.py  schemas.py  workflow.py
src/freelance_assitant/proposal/: cases.py  generator.py  templates.py
src/freelance_assitant/scoring/: base.py  decision_enricher.py  engine.py  llm_scorer.py  profile.py  rules.py
src/freelance_assitant/services/: agent_handoff.py  llm.py
src/freelance_assitant/status_checkers/: __init__.py  base.py  fl_ru.py  registry.py  workspace.py
src/freelance_assitant/storage/: database.py  (+4 more)
tests/: test_llm.py
tests/fixtures/: fl_ru_rss.xml
tests/test_collectors/: test_fl_ru.py  test_kwork.py  test_workspace.py
tests/test_scoring/: test_decision_enricher.py  test_engine.py  test_rules.py
(+13 files in other folders)
